2009-09-30  Atsushi Enomoto  <atsushi@ximian.com>

	* SvcHttpHandlerFactory.cs, HttpTransportBindingElement.cs :
	  use AspNetCompatibilityEnabled.
	* SvcHttpHandler.cs : disable ApplyConfiguration(). It should be done
	  at ServiceHostBase.
	* AspNetReplyChannel.cs : remove extra field.

2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpReplyChannel.cs : remove extra field.

2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>

	* AspNetRequestContext.cs : remove CWL.

2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>

	* AspNetReplyChannel.cs, AspNetRequestContext.cs : close HttpContext
	  only after AspNetRequestContext is closed. Do not close it
	  immediately after receiving the context. (HttpRuntime destructs it
	  and further uses then becomes impossible.)

2009-09-29  Atsushi Enomoto  <atsushi@ximian.com>

	* AspNetReplyChannel.cs, HttpReplyChannel.cs : add some comments.
	* SvcHttpHandlerFactory.cs, SvcHttpHandler.cs, HttpChannelListener.cs:
	  Make sure that AspNetChannelListener is bound to correct
	  SvcHttpHandler, regardless of specific request URI. It is required
	  for both WSDL requests and RESTful binding requests.

2009-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* MessageProperties.cs : fix CopyProperties() behavior to not
	  clear existing items. Make all properties call this[name].

2009-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpTransportBindingElement.cs : fix 2.1 build.

2009-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* TransportBindingElement.cs : another GetProperty fix, iterate
	  other binding elements.

2009-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpTransportBindingElement.cs, PeerTransportBindingElement.cs :
	  some GetProperty() implementation.

2009-09-14  Atsushi Enomoto  <atsushi@ximian.com>

	* HttpListenerManager.cs : release HttpListener and avoid extra
	  close process more than once.

2009-09-11  Atsushi Enomoto  <atsushi@ximian.com>
