@@ -333,10 +333,18 @@ w.Close ();
 			public void WaitEnd ()
 			{
 				if (!IsCompleted) {
+
+					const bool exit_context =
+#if MONOTOUCH
+						false; // MonoTouch doesn't support any remoting feature
+#else
+						true;
+#endif
+
 					// FIXME: Do we need to use the timeout? If so, what happens when the timeout is reached.
 					// Is the current request cancelled and an exception thrown? If so we need to pass the
 					// exception to the Complete () method and allow the result to complete 'normally'.
-					if (!wait.WaitOne (Timeout, true))
+					if (!wait.WaitOne (Timeout, exit_context))
 						throw new TimeoutException ();
 				}
 				if (error != null)
