@@ -1,3 +1,8 @@
+2009-09-30  Jb Evain  <jbevain@novell.com>
+
+	* HttpRequestChannel.cs: When compiling for MonoTouch, avoid
+	to use any of the remoting features.
+
 2009-09-30  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* SvcHttpHandlerFactory.cs, HttpTransportBindingElement.cs :
